--- a/Query patterns take 2.ipynb
+++ b/Query patterns take 2.ipynb
@@ -24,416 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_feb = df_march = df_jan = df_2019 = df_jan_march = pd.DataFrame(columns=pd.read_csv(files[0]).columns)\n",
+    "df_feb = df_march = df_jan = df_2019 = df_jan_march = df_day1 = df_day2 = df_day3 = pd.DataFrame(columns=pd.read_csv(files[0]).columns)\n",
     "for f in files:\n",
     "    df = pd.read_csv(f)\n",
     "    df_feb = df_feb.append(df[(df.years == 2020) & (df.months == 2)], ignore_index=True)\n",
     "    df_march = df_march.append(df[(df.years == 2020) & (df.months == 3)], ignore_index=True)\n",
     "    df_jan = df_jan.append(df[(df.years == 2020) & (df.months == 1)], ignore_index=True)\n",
     "    df_2019 = df_jan_march.append(df[(df.years == 2019)], ignore_index=True)\n",
-    "    df_jan_march = df_feb.append(df[(df.years == 2020) & (df.months < 4)], ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Unnamed: 0.1</th>\n",
-       "      <th>ratings</th>\n",
-       "      <th>action</th>\n",
-       "      <th>categories</th>\n",
-       "      <th>dislikes</th>\n",
-       "      <th>likes</th>\n",
-       "      <th>durations</th>\n",
-       "      <th>view_cnts</th>\n",
-       "      <th>years</th>\n",
-       "      <th>months</th>\n",
-       "      <th>days</th>\n",
-       "      <th>hours</th>\n",
-       "      <th>minutes</th>\n",
-       "      <th>weekdays</th>\n",
-       "      <th>link</th>\n",
-       "      <th>titles</th>\n",
-       "      <th>source</th>\n",
-       "      <th>query</th>\n",
-       "      <th>datetime</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>900</td>\n",
-       "      <td>900</td>\n",
-       "      <td>4.903648</td>\n",
-       "      <td>Watched</td>\n",
-       "      <td>['Science &amp; Technology']</td>\n",
-       "      <td>478.0</td>\n",
-       "      <td>19366.0</td>\n",
-       "      <td>387.0</td>\n",
-       "      <td>392936.0</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>https://www.youtube.com/watch?v=qol3lIY5j4U</td>\n",
-       "      <td>This Chinese CPU could be GOOD?!</td>\n",
-       "      <td>youtube</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020-02-01 08:06:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>899</td>\n",
-       "      <td>899</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Searched</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>https://www.youtube.com/results?search_query=t...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>youtube</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020-02-01 08:06:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>898</td>\n",
-       "      <td>898</td>\n",
-       "      <td>4.944050</td>\n",
-       "      <td>Watched</td>\n",
-       "      <td>['Sports']</td>\n",
-       "      <td>4594.0</td>\n",
-       "      <td>323843.0</td>\n",
-       "      <td>1616.0</td>\n",
-       "      <td>11345878.0</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>12</td>\n",
-       "      <td>5</td>\n",
-       "      <td>https://www.youtube.com/watch?v=jGHQr2yy_4U</td>\n",
-       "      <td>Los Angeles Lakers Pay Tribute To Kobe Bryant</td>\n",
-       "      <td>youtube</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020-02-01 08:12:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6610</td>\n",
-       "      <td>1959</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Searched</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>7</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>search</td>\n",
-       "      <td>nyc housing lottery</td>\n",
-       "      <td>2020-02-01 09:07:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6609</td>\n",
-       "      <td>1958</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Visited</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>14</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>search</td>\n",
-       "      <td>Affordable Rental and Homeownership Opportunit...</td>\n",
-       "      <td>2020-02-01 09:14:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62201</th>\n",
-       "      <td>4603</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Searched</td>\n",
-       "      <td>[['/Arts &amp; Entertainment/TV &amp; Video/TV Shows &amp;...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>3</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
-       "      <td>49</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>search</td>\n",
-       "      <td>gac closed ur</td>\n",
-       "      <td>2020-03-16 16:49:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62202</th>\n",
-       "      <td>4602</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Visited</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>3</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
-       "      <td>49</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>search</td>\n",
-       "      <td>The Steamies: UR's best (and worst) showers on...</td>\n",
-       "      <td>2020-03-16 16:49:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62203</th>\n",
-       "      <td>4600</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Visited</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>3</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
-       "      <td>58</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>search</td>\n",
-       "      <td>This is your captain speaking speaker - New Yo...</td>\n",
-       "      <td>2020-03-16 16:58:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62204</th>\n",
-       "      <td>4601</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Searched</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>3</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
-       "      <td>58</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>search</td>\n",
-       "      <td>this is your captains speaking speakers</td>\n",
-       "      <td>2020-03-16 16:58:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62205</th>\n",
-       "      <td>4599</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Searched</td>\n",
-       "      <td>[['/Beauty &amp; Fitness/Fitness', 0.7599999904632...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>3</td>\n",
-       "      <td>16</td>\n",
-       "      <td>17</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>search</td>\n",
-       "      <td>indoor rowing machine</td>\n",
-       "      <td>2020-03-16 17:08:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>62206 rows × 20 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Unnamed: 0 Unnamed: 0.1   ratings    action  \\\n",
-       "0            900          900  4.903648   Watched   \n",
-       "1            899          899       NaN  Searched   \n",
-       "2            898          898  4.944050   Watched   \n",
-       "3           6610         1959       NaN  Searched   \n",
-       "4           6609         1958       NaN   Visited   \n",
-       "...          ...          ...       ...       ...   \n",
-       "62201       4603            4       NaN  Searched   \n",
-       "62202       4602            3       NaN   Visited   \n",
-       "62203       4600            1       NaN   Visited   \n",
-       "62204       4601            2       NaN  Searched   \n",
-       "62205       4599            0       NaN  Searched   \n",
-       "\n",
-       "                                              categories  dislikes     likes  \\\n",
-       "0                               ['Science & Technology']     478.0   19366.0   \n",
-       "1                                                    NaN       NaN       NaN   \n",
-       "2                                             ['Sports']    4594.0  323843.0   \n",
-       "3                                                     []       NaN       NaN   \n",
-       "4                                                     []       NaN       NaN   \n",
-       "...                                                  ...       ...       ...   \n",
-       "62201  [['/Arts & Entertainment/TV & Video/TV Shows &...       NaN       NaN   \n",
-       "62202                                                 []       NaN       NaN   \n",
-       "62203                                                 []       NaN       NaN   \n",
-       "62204                                                 []       NaN       NaN   \n",
-       "62205  [['/Beauty & Fitness/Fitness', 0.7599999904632...       NaN       NaN   \n",
-       "\n",
-       "       durations   view_cnts years months days hours minutes weekdays  \\\n",
-       "0          387.0    392936.0  2020      2    1     8       6        5   \n",
-       "1            NaN         NaN  2020      2    1     8       6        5   \n",
-       "2         1616.0  11345878.0  2020      2    1     8      12        5   \n",
-       "3            NaN         NaN  2020      2    1     9       7        5   \n",
-       "4            NaN         NaN  2020      2    1     9      14        5   \n",
-       "...          ...         ...   ...    ...  ...   ...     ...      ...   \n",
-       "62201        NaN         NaN  2020      3   16    16      49        0   \n",
-       "62202        NaN         NaN  2020      3   16    16      49        0   \n",
-       "62203        NaN         NaN  2020      3   16    16      58        0   \n",
-       "62204        NaN         NaN  2020      3   16    16      58        0   \n",
-       "62205        NaN         NaN  2020      3   16    17       8        0   \n",
-       "\n",
-       "                                                    link  \\\n",
-       "0            https://www.youtube.com/watch?v=qol3lIY5j4U   \n",
-       "1      https://www.youtube.com/results?search_query=t...   \n",
-       "2            https://www.youtube.com/watch?v=jGHQr2yy_4U   \n",
-       "3                                                    NaN   \n",
-       "4                                                    NaN   \n",
-       "...                                                  ...   \n",
-       "62201                                                NaN   \n",
-       "62202                                                NaN   \n",
-       "62203                                                NaN   \n",
-       "62204                                                NaN   \n",
-       "62205                                                NaN   \n",
-       "\n",
-       "                                              titles   source  \\\n",
-       "0                   This Chinese CPU could be GOOD?!  youtube   \n",
-       "1                                                NaN  youtube   \n",
-       "2      Los Angeles Lakers Pay Tribute To Kobe Bryant  youtube   \n",
-       "3                                                NaN   search   \n",
-       "4                                                NaN   search   \n",
-       "...                                              ...      ...   \n",
-       "62201                                            NaN   search   \n",
-       "62202                                            NaN   search   \n",
-       "62203                                            NaN   search   \n",
-       "62204                                            NaN   search   \n",
-       "62205                                            NaN   search   \n",
-       "\n",
-       "                                                   query             datetime  \n",
-       "0                                                    NaN  2020-02-01 08:06:00  \n",
-       "1                                                    NaN  2020-02-01 08:06:00  \n",
-       "2                                                    NaN  2020-02-01 08:12:00  \n",
-       "3                                    nyc housing lottery  2020-02-01 09:07:00  \n",
-       "4      Affordable Rental and Homeownership Opportunit...  2020-02-01 09:14:00  \n",
-       "...                                                  ...                  ...  \n",
-       "62201                                      gac closed ur  2020-03-16 16:49:00  \n",
-       "62202  The Steamies: UR's best (and worst) showers on...  2020-03-16 16:49:00  \n",
-       "62203  This is your captain speaking speaker - New Yo...  2020-03-16 16:58:00  \n",
-       "62204            this is your captains speaking speakers  2020-03-16 16:58:00  \n",
-       "62205                              indoor rowing machine  2020-03-16 17:08:00  \n",
-       "\n",
-       "[62206 rows x 20 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_jan_march"
+    "    df_jan_march = df_feb.append(df[(df.years == 2020) & (df.months < 4)], ignore_index=True)\n",
+    "    df_day3 = df_day3.append(df[(df.years == 2020) & (df.weekdays == 0)], ignore_index=True)"
    ]
   },
   {
@@ -945,7 +548,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1009,7 +612,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
