Added user analysis file and updates to trails research

--- a/mike-work-space/trendsCategories.ipynb
+++ b/mike-work-space/trendsCategories.ipynb
@@ -5,7 +5,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "q1 =  \"coronaviruses NJ\"\n",
+    "q2 = \"corona virus in new jersey\"\n",
+    "\n",
+    "def has_shared_words(q1, q2):\n",
+    "    '''\n",
+    "    q1: a string\n",
+    "    \n",
+    "    A poorman's version of comparing if two queries are talking about the same thing.\n",
+    "    This is purely based on word match.\n",
+    "    '''\n",
+    "    q1 = q1.lower()\n",
+    "    q2 = q2.lower()\n",
+    "    \n",
+    "    match = False\n",
+    "    # check if any word from q1 is in q2\n",
+    "    for word in q1.split():\n",
+    "        if word in q2:\n",
+    "            match = True\n",
+    "    \n",
+    "    if match == False:\n",
+    "        for word in q2.split():\n",
+    "            if word in q1:\n",
+    "                match = True\n",
+    "    return match\n",
+    "\n",
+    "has_shared_words(q1, q2)"
+   ]
   }
  ],
  "metadata": {
