Graphs added to monthly breakdowns

--- a/mike-work-space/categorizeUsers.ipynb
+++ b/mike-work-space/categorizeUsers.ipynb
@@ -54,33 +54,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def return_active_accounts():\n",
+    "def return_active_accounts(minEventCount,lastDateForFull,year,months_to_check):\n",
+    "\n",
     "    userDic = {}\n",
     "    goodUsers = []\n",
     "    for file in files:\n",
     "        goodMonths = []\n",
     "        df = create_user_df(file)\n",
     "        for month in range(1,12):\n",
-    "            if retrun_month_df(df,month,2020).shape[0] > 10 and max(retrun_month_df(df,month,2020)['datetime']).day > 20:\n",
+    "            if retrun_month_df(df,month,year).shape[0] > minEventCount and max(retrun_month_df(df,month,year)['datetime']).day > lastDateForFull:\n",
     "                goodMonths.append(month)\n",
     "        userDic[file] = goodMonths\n",
-    "    months_to_check = [1,2,3]\n",
+    "    \n",
     "    for i in list(userDic.keys()):\n",
     "        if len([j for j in months_to_check if j in userDic[i]]) == len(months_to_check):\n",
     "            goodUsers.append(i)\n",
-    "    print(len(goodUsers))\n",
-    "    print(len(files))\n",
+    "    print(str(len(goodUsers)),\"/\",str(len(files)),\" Users fit the passed in criteria\")\n",
     "        \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -99,13 +99,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18\n",
-      "76\n"
+      "18 / 76  Users fit the passed in criteria\n"
      ]
     }
    ],
    "source": [
-    "return_active_accounts()"
+    "minEventCount = 10\n",
+    "lastDateForFull = 20\n",
+    "year = 2020\n",
+    "months_to_check = [1,2,3]\n",
+    "return_active_accounts(minEventCount,lastDateForFull,year,months_to_check)"
    ]
   },
   {
@@ -113,7 +116,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "minEventCount = 10\n",
+    "lastDateForFull = 20\n",
+    "year = 2020\n",
+    "months_to_check = [1,2,3]\n",
+    "return_active_accounts(minEventCount,lastDateForFull,year,months_to_check)"
+   ]
   }
  ],
  "metadata": {
