Fixed issue in retrieve_all_questions

--- a/data/survey_data/new_data/analysis.ipynb
+++ b/data/survey_data/new_data/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataKey,print_all_questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_result_histogram(field_name):\n",
     "    df = pd.read_csv(\"processed_data.csv\")\n",
     "    try:\n",
-    "        question, answers = dataKey.retrive_question_data(field_name)\n",
+    "        question, answers = dataKey.retrieve_question_data(field_name)\n",
     "    except Exception:\n",
     "        question = field_name\n",
     "    df[field_name].value_counts().plot.hist()\n",
@@ -35,7 +44,7 @@
    "source": [
     "def create_result_bar(field_name):\n",
     "    df = pd.read_csv(\"processed_data.csv\")\n",
-    "    question, answers = dataKey.retrive_question_data(field_name)\n",
+    "    question, answers = dataKey.retrieve_question_data(field_name)\n",
     "    print(\"Question:\",question)\n",
     "    for i in answers.keys():\n",
     "        print(i+\": \"+answers[i])\n",
