fixed issue in survey data formatting for calculating scores

--- a/mike-work-space/categorizeUsers.ipynb
+++ b/mike-work-space/categorizeUsers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def retrun_month_df(df,month,year): \n",
-    "    df_youtube_data_month = df[(df['years'] == year) & (df['months'] == month) &(df['source'] == 'youtube') ]\n",
+    "    df_youtube_data_month = df[(df['years'] == year) & (df['months'] == month) ]\n",
     "    df_youtube_data_month['datetime'] = pd.to_datetime(df_youtube_data_month.datetime)\n",
     "    df_youtube_data_month = df_youtube_data_month.sort_values(by='datetime',ascending =True).reset_index()\n",
     "    #print(\"Dataframe Size for month #\"+str(month)+\": \"+str(df_youtube_data_month.shape[0]))\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-4-71fb16b53c72>:3: SettingWithCopyWarning: \n",
+      "<ipython-input-7-3b8a7c764b56>:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -99,12 +99,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19 / 37  Users fit the passed in criteria\n"
+      "30 / 37  Users fit the passed in criteria\n"
      ]
     }
    ],
    "source": [
-    "minEventCount = 50\n",
+    "minEventCount = 100\n",
     "lastDateForFull = 20\n",
     "year = 2020\n",
     "months_to_check = [1,2,3,4,5]\n",
@@ -113,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-4-71fb16b53c72>:3: SettingWithCopyWarning: \n",
+      "<ipython-input-5-71fb16b53c72>:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
